Add additional modules and commands

--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,4 @@
 server: "minecraft-s1.lan.seanmassey.net"
-port: "25575"
-password: "VMware1!"
+port: ""
+password: ""
+properties: "/Users/sean.massey/Documents/server.properties"
